--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nodemon": "^3.0.3",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "Micro Service for Flights CRUD"
   }
 }
